// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Correctly returns Cluster resource definitions in global search: SearchDefinitions-Cluster-globalhub 1`] = `
Array [
  Object {
    "cell": <CreateGlobalSearchDetailsLink
      item={
        Object {
          "cluster": "test-cluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Cluster",
          "label": "testLabel=label; testLabel1=label1",
          "managedHub": "global-hub",
          "name": "test-cluster",
          "namespace": "test-cluster",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "global-hub",
    "header": "Managed hub",
    "sort": "managedHub",
  },
  Object {
    "cell": "-",
    "header": "Available",
    "sort": "ManagedClusterConditionAvailable",
  },
  Object {
    "cell": "-",
    "header": "Hub accepted",
    "sort": "HubAcceptedManagedCluster",
  },
  Object {
    "cell": "-",
    "header": "Joined",
    "sort": "ManagedClusterJoined",
  },
  Object {
    "cell": "-",
    "header": "Nodes",
    "sort": "nodes",
  },
  Object {
    "cell": "-",
    "header": "Kubernetes version",
    "sort": "kubernetesVersion",
  },
  Object {
    "cell": "-",
    "header": "CPU",
    "sort": "cpu",
  },
  Object {
    "cell": "-",
    "header": "Memory",
    "sort": "memory",
  },
  Object {
    "cell": "-",
    "header": "Console URL",
    "sort": "consoleURL",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns CreateApplicationTopologyLink - global search 1`] = `
<body>
  <div>
    <a
      aria-disabled="false"
      class="pf-c-button pf-m-link pf-m-inline"
      data-ouia-component-id="OUIA-Generated-Button-link-6"
      data-ouia-component-type="PF4/Button"
      data-ouia-safe="true"
      href="undefined/multicloud/applications/details/testNamespace/testApp/topology?apiVersion=application.app.k8s.io"
      target="_blank"
    >
      View topology
      <span
        class="pf-c-button__icon pf-m-end"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
          />
        </svg>
      </span>
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateApplicationTopologyLink 1`] = `
<body>
  <div>
    <a
      href="/multicloud/applications/details/testNamespace/testApp/topology?apiVersion=application.app.k8s.io"
    >
      View topology
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateDetailsLink - ACM-Application 1`] = `
<body>
  <div>
    <a
      href="/multicloud/applications/details/testApplicationNamespace/testApplicationName/overview?apiVersion=application.app.k8s.io&cluster=cluster"
    >
      testApplicationName
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateDetailsLink - Cluster 1`] = `
<body>
  <div>
    <a
      href="/multicloud/infrastructure/clusters/details/testClusterName/testClusterName/overview"
    >
      testClusterName
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateDetailsLink - Default 1`] = `
<body>
  <div>
    <a
      href="/multicloud/search/resources?cluster%3DtestCluster%26kind%3DPod%26namespace%3DtestPodNamespace%26name%3DtestPodName"
    >
      testPodName
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateDetailsLink - HUB-Policy 1`] = `
<body>
  <div>
    <a
      href="/multicloud/governance/policies/details/testPolicyNamespace/testPolicyName"
    >
      testPolicyName
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateDetailsLink - Managed-Policy 1`] = `
<body>
  <div>
    <a
      href="/multicloud/search/resources?cluster%3DtestCluster%26kind%3DPolicy%26namespace%3DtestPolicyNamespace%26name%3DtestPolicyName"
    >
      testPolicyName
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateDetailsLink - NON-Application 1`] = `
<body>
  <div>
    <a
      href="/multicloud/search/resources?cluster%3DtestCluster%26kind%3DApplication%26namespace%3DtestApplicationNamespace%26name%3DtestApplicationName"
    >
      testApplicationName
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateDetailsLink - PolicyReport 1`] = `
<body>
  <div>
    <a
      href="/multicloud/infrastructure/clusters/details/testPolicyReportNamespace/testPolicyReportNamespace/overview?showClusterIssues%3Dtrue"
    >
      testPolicyReport
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateExternalLink from clusterip 1`] = `"http://clusterip"`;

exports[`Correctly returns CreateExternalLink from consoleURL 1`] = `
<a
  href="http://consoleurl"
  rel="noopener noreferrer"
  target="_blank"
>
  Launch
</a>
`;

exports[`Correctly returns CreateExternalVMLink 1`] = `
<body>
  <div>
    <a
      aria-disabled="false"
      class="pf-c-button pf-m-link pf-m-inline"
      data-ouia-component-id="OUIA-Generated-Button-link-7"
      data-ouia-component-type="PF4/Button"
      data-ouia-safe="true"
      href="https://testCluster.com/k8s/ns/testVM/kubevirt.io~v1~VirtualMachine/testVM"
      target="_blank"
    >
      Launch
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed cluster Application resource 1`] = `
<body>
  <div>
    <a
      aria-disabled="false"
      class="pf-c-button pf-m-link pf-m-inline"
      data-ouia-component-id="OUIA-Generated-Button-link-3"
      data-ouia-component-type="PF4/Button"
      data-ouia-safe="true"
      href="undefined/multicloud/applications/details/testClusterNamespace/testClusterName/overview?apiVersion=application.app.k8s.io&cluster=leaf-cluster"
      target="_blank"
    >
      testClusterName
      <span
        class="pf-c-button__icon pf-m-end"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
          />
        </svg>
      </span>
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed cluster Cluster resource 1`] = `
<body>
  <div>
    <a
      aria-disabled="false"
      class="pf-c-button pf-m-link pf-m-inline"
      data-ouia-component-id="OUIA-Generated-Button-link-2"
      data-ouia-component-type="PF4/Button"
      data-ouia-safe="true"
      href="undefined/multicloud/infrastructure/clusters/details/testClusterName/testClusterName/overview?cluster%3Dundefined%26kind%3DCluster%26namespace%3DtestClusterNamespace%26name%3DtestClusterName"
      target="_blank"
    >
      testClusterName
      <span
        class="pf-c-button__icon pf-m-end"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
          />
        </svg>
      </span>
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed cluster Policy resource 1`] = `
<body>
  <div>
    <a
      href="/multicloud/governance/policies/details/default/global-policy"
    >
      global-policy
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed cluster PolicyReport resource 1`] = `
<body>
  <div>
    <a
      aria-disabled="false"
      class="pf-c-button pf-m-link pf-m-inline"
      data-ouia-component-id="OUIA-Generated-Button-link-5"
      data-ouia-component-type="PF4/Button"
      data-ouia-safe="true"
      href="undefined/multicloud/infrastructure/clusters/details/testClusterNamespace/testClusterNamespace/overview?showClusterIssues%3Dtrue"
      target="_blank"
    >
      leaf-cluster-policyreport
      <span
        class="pf-c-button__icon pf-m-end"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
          />
        </svg>
      </span>
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed cluster default resource 1`] = `
<body>
  <div>
    <a
      aria-disabled="false"
      class="pf-c-button pf-m-link pf-m-inline"
      data-ouia-component-id="OUIA-Generated-Button-link-1"
      data-ouia-component-type="PF4/Button"
      data-ouia-safe="true"
      href="https://leaf-hub.com/multicloud/search/resources?cluster%3DtestCluster%26kind%3DPod%26namespace%3DtestPodNamespace%26name%3DtestPodName"
      target="_blank"
    >
      testPodName
      <span
        class="pf-c-button__icon pf-m-end"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
          />
        </svg>
      </span>
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed hub Application resource 1`] = `
<body>
  <div>
    <a
      href="/multicloud/applications/details/testClusterNamespace/testClusterName/overview?apiVersion=application.app.k8s.io"
    >
      testClusterName
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed hub Cluster resource 1`] = `
<body>
  <div>
    <a
      href="/multicloud/infrastructure/clusters/details/testClusterName/testClusterName/overview"
    >
      testClusterName
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed hub Policy resource 1`] = `
<body>
  <div>
    <a
      aria-disabled="false"
      class="pf-c-button pf-m-link pf-m-inline"
      data-ouia-component-id="OUIA-Generated-Button-link-4"
      data-ouia-component-type="PF4/Button"
      data-ouia-safe="true"
      href="undefined/multicloud/governance/policies/details/default/hub-a-policy-test"
      target="_blank"
    >
      hub-a-policy-test
      <span
        class="pf-c-button__icon pf-m-end"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
          />
        </svg>
      </span>
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed hub PolicyReport resource 1`] = `
<body>
  <div>
    <a
      href="/multicloud/infrastructure/clusters/details/testClusterNamespace/testClusterNamespace/overview?showClusterIssues%3Dtrue"
    >
      local-cluster-policyreport
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed hub default resource 1`] = `
<body>
  <div>
    <a
      href="/multicloud/search/resources?cluster%3DtestCluster%26kind%3DPod%26namespace%3DtestPodNamespace%26name%3DtestPodName"
    >
      testPodName
    </a>
  </div>
</body>
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-application 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <CreateApplicationTopologyLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
      t={[Function]}
    />,
    "header": "Topology",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-channel 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "-",
    "header": "Type",
    "sort": "type",
  },
  Object {
    "cell": "-",
    "header": "Pathname",
    "sort": "pathname",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-cluster 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "-",
    "header": "Available",
    "sort": "ManagedClusterConditionAvailable",
  },
  Object {
    "cell": "-",
    "header": "Hub accepted",
    "sort": "HubAcceptedManagedCluster",
  },
  Object {
    "cell": "-",
    "header": "Joined",
    "sort": "ManagedClusterJoined",
  },
  Object {
    "cell": "-",
    "header": "Nodes",
    "sort": "nodes",
  },
  Object {
    "cell": "-",
    "header": "Kubernetes version",
    "sort": "kubernetesVersion",
  },
  Object {
    "cell": "-",
    "header": "CPU",
    "sort": "cpu",
  },
  Object {
    "cell": "-",
    "header": "Memory",
    "sort": "memory",
  },
  Object {
    "cell": "-",
    "header": "Console URL",
    "sort": "consoleURL",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-clusteroperator 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "-",
    "header": "Version",
    "sort": "version",
  },
  Object {
    "cell": "-",
    "header": "Available",
    "sort": "available",
  },
  Object {
    "cell": "-",
    "header": "Progressing",
    "sort": "progressing",
  },
  Object {
    "cell": "-",
    "header": "Degraded",
    "sort": "degraded",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-clusterserviceversion 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "-",
    "header": "Version",
    "sort": "version",
  },
  Object {
    "cell": "-",
    "header": "Phase",
    "sort": "phase",
  },
  Object {
    "cell": "-",
    "header": "Display",
    "sort": "display",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-cronjob 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "-",
    "header": "schedule",
    "sort": "schedule",
  },
  Object {
    "cell": "-",
    "header": "Suspend",
    "sort": "suspend",
  },
  Object {
    "cell": "-",
    "header": "Active",
    "sort": "active",
  },
  Object {
    "cell": "-",
    "header": "Last schedule",
    "sort": "lastSchedule",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-daemonset 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "-",
    "header": "Desired",
    "sort": "desired",
  },
  Object {
    "cell": "-",
    "header": "Current",
    "sort": "current",
  },
  Object {
    "cell": "-",
    "header": "Ready",
    "sort": "ready",
  },
  Object {
    "cell": "-",
    "header": "Updated",
    "sort": "updated",
  },
  Object {
    "cell": "-",
    "header": "Available",
    "sort": "available",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-deployable 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": "-",
    "header": "Chart URL",
    "sort": "chartUrl",
  },
  Object {
    "cell": "-",
    "header": "Dependencies",
    "sort": "dependencies",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-deployment 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "-",
    "header": "Desired",
    "sort": "desired",
  },
  Object {
    "cell": "-",
    "header": "Current",
    "sort": "current",
  },
  Object {
    "cell": "-",
    "header": "Ready",
    "sort": "ready",
  },
  Object {
    "cell": "-",
    "header": "Available",
    "sort": "available",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-genericresource 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-helmrelease 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "-",
    "header": "Source type",
    "sort": "sourceType",
  },
  Object {
    "cell": "-",
    "header": "URL",
    "sort": "url",
  },
  Object {
    "cell": "-",
    "header": "Chart path",
    "sort": "chartPath",
  },
  Object {
    "cell": "-",
    "header": "Branch",
    "sort": "branch",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-job 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "-",
    "header": "Completions",
    "sort": "completions",
  },
  Object {
    "cell": "-",
    "header": "Parallelism",
    "sort": "parallelism",
  },
  Object {
    "cell": "-",
    "header": "Successful",
    "sort": "successful",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-namespace 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "-",
    "header": "Status",
    "sort": "status",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-node 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "-",
    "header": "Status",
    "sort": "status",
  },
  Object {
    "cell": "-",
    "header": "Role",
    "sort": "role",
  },
  Object {
    "cell": "-",
    "header": "Architecture",
    "sort": "architecture",
  },
  Object {
    "cell": "-",
    "header": "OS image",
    "sort": "osImage",
  },
  Object {
    "cell": "-",
    "header": "CPU",
    "sort": "cpu",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-persistentvolume 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "-",
    "header": "Type",
    "sort": "type",
  },
  Object {
    "cell": "-",
    "header": "Status",
    "sort": "status",
  },
  Object {
    "cell": "-",
    "header": "Capacity",
    "sort": "capacity",
  },
  Object {
    "cell": "-",
    "header": "Access mode",
    "sort": "accessMode",
  },
  Object {
    "cell": "-",
    "header": "Claim",
    "sort": "claimRef",
  },
  Object {
    "cell": "-",
    "header": "Reclaim policy",
    "sort": "reclaimPolicy",
  },
  Object {
    "cell": "-",
    "header": "Path",
    "sort": "path",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-persistentvolumeclaim 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "-",
    "header": "Status",
    "sort": "status",
  },
  Object {
    "cell": "-",
    "header": "Persistent volume",
    "sort": "volumeName",
  },
  Object {
    "cell": "-",
    "header": "Requests",
    "sort": "request",
  },
  Object {
    "cell": "-",
    "header": "Access mode",
    "sort": "accessMode",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-placementbinding 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": "-",
    "header": "Subjects",
    "sort": "subjects",
  },
  Object {
    "cell": "-",
    "header": "Placement policy",
    "sort": "placementpolicy",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-placementpolicy 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": "-",
    "header": "Replicas",
    "sort": "replicas",
  },
  Object {
    "cell": "-",
    "header": "Decisions",
    "sort": "decisions",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-placementrule 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "-",
    "header": "Replicas",
    "sort": "replicas",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-pod 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "-",
    "header": "Status",
    "sort": "status",
  },
  Object {
    "cell": "-",
    "header": "Restarts",
    "sort": "restarts",
  },
  Object {
    "cell": "-",
    "header": "Host IP",
    "sort": "hostIP",
  },
  Object {
    "cell": "-",
    "header": "Pod IP",
    "sort": "podIP",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-policy 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "-",
    "header": "Disabled",
    "sort": "disabled",
  },
  Object {
    "cell": "-",
    "header": "Violations",
    "sort": "compliant",
  },
  Object {
    "cell": "-",
    "header": "Remediation action",
    "sort": "remediationAction",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-policyreport 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "scope",
    "header": "Scope",
    "sort": "scope",
    "tooltip": "Scope refers to the cluster associated to the PolicyReport.",
  },
  Object {
    "cell": "-",
    "header": "Critical",
    "sort": "critical",
  },
  Object {
    "cell": "-",
    "header": "Important",
    "sort": "important",
  },
  Object {
    "cell": "-",
    "header": "Moderate",
    "sort": "moderate",
  },
  Object {
    "cell": "-",
    "header": "Low",
    "sort": "low",
  },
  Object {
    "cell": "-",
    "header": "Rules",
    "tooltip": "Use the rules filter to search for PolicyReports that contain a specific rule.",
  },
  Object {
    "cell": "-",
    "header": "Categories",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-release 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "-",
    "header": "Status",
    "sort": "status",
  },
  Object {
    "cell": "-",
    "header": "Chart name",
    "sort": "chartName",
  },
  Object {
    "cell": "-",
    "header": "Chart version",
    "sort": "chartVersion",
  },
  Object {
    "cell": "-",
    "header": "Updated",
    "sort": "updated",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-replicaset 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "-",
    "header": "Desired",
    "sort": "desired",
  },
  Object {
    "cell": "-",
    "header": "Current",
    "sort": "current",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-secret 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "-",
    "header": "Type",
    "sort": "type",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-service 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "-",
    "header": "Type",
    "sort": "type",
  },
  Object {
    "cell": "-",
    "header": "Cluster IP",
    "sort": "clusterIP",
  },
  Object {
    "cell": "-",
    "header": "Port",
    "sort": "port",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-statefulset 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "-",
    "header": "Desired",
    "sort": "desired",
  },
  Object {
    "cell": "-",
    "header": "Current",
    "sort": "current",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-subscription.apps.open-cluster-management.io 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "-",
    "header": "Package",
    "sort": "package",
  },
  Object {
    "cell": "-",
    "header": "Status",
    "sort": "status",
  },
  Object {
    "cell": "-",
    "header": "Local placement",
    "sort": "localPlacement",
  },
  Object {
    "cell": "-",
    "header": "Time window",
    "sort": "timeWindow",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-subscription.operators.coreos.com 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "-",
    "header": "Package",
    "sort": "package",
  },
  Object {
    "cell": "-",
    "header": "Source",
    "sort": "source",
  },
  Object {
    "cell": "-",
    "header": "Channel",
    "sort": "Channel",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-virtualmachine 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "-",
    "header": "Status",
    "sort": "status",
  },
  Object {
    "cell": "-",
    "header": "Ready",
    "sort": "ready",
  },
  Object {
    "cell": <CreateExternalVMLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
      t={[Function]}
    />,
    "header": "VM details",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-virtualmachineinstance 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "-",
    "header": "Node",
    "sort": "node",
  },
  Object {
    "cell": "-",
    "header": "IP address",
    "sort": "ipaddress",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-virtualmachinespage 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "search": [Function],
    "sort": "name",
  },
  Object {
    "cell": "-",
    "header": "Status",
    "sort": "status",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "search": [Function],
    "sort": "cluster",
  },
  Object {
    "cell": "-",
    "header": "Node",
    "sort": "node",
  },
  Object {
    "cell": "-",
    "header": "IP address",
    "sort": "ipaddress",
  },
  Object {
    "cell": <CreateExternalVMLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
      t={[Function]}
    />,
    "header": "VM details",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
]
`;

exports[`Correctly returns category components 1`] = `
<AcmLabels
  collapse={Array []}
  labels={
    Array [
      "testcategory=category1",
      "testcategory=category2",
    ]
  }
/>
`;

exports[`Correctly returns empty CreateApplicationTopologyLink 1`] = `
<body>
  <div>
    <div>
      -
    </div>
  </div>
</body>
`;

exports[`Correctly returns empty CreateExternalLink 1`] = `"-"`;

exports[`Correctly returns empty CreateExternalVMLink 1`] = `
<body>
  <div>
    -
  </div>
</body>
`;

exports[`Correctly returns empty labels 1`] = `"-"`;

exports[`Correctly returns formatSearchbarSuggestions no timestamp 1`] = `"-"`;

exports[`Correctly returns formatSearchbarSuggestions with T in timestamp 1`] = `"3 days ago"`;

exports[`Correctly returns formatSearchbarSuggestions without T in timestamp 1`] = `"3 days ago"`;

exports[`Correctly returns label components 1`] = `
<AcmLabels
  collapse={Array []}
  labels={
    Array [
      "testlabel=label1",
      "testlabel=label2",
    ]
  }
/>
`;

exports[`Correctly returns policyreport policies 1`] = `
<AcmLabels
  collapse={
    Array [
      "MASTER_DEFINED_AS_MACHINESETS",
      "NODES_MINIMUM_REQUIREMENTS_NOT_MET",
      "UNSUPPORT_SDN_PLUGIN",
    ]
  }
  labels={
    Array [
      "AUTH_OPERATOR_PROXY_ERROR",
      "CONTAINER_ROOT_PARTITION_SIZE",
      "MASTER_DEFINED_AS_MACHINESETS",
      "NODES_MINIMUM_REQUIREMENTS_NOT_MET",
      "UNSUPPORT_SDN_PLUGIN",
    ]
  }
/>
`;

exports[`Correctly returns resource with managedHub column: SearchDefinitions-global-node 1`] = `
Array [
  Object {
    "cell": <CreateGlobalSearchDetailsLink
      item={
        Object {
          "apiversion": "v1",
          "cluster": "testCluster",
          "kind": "Node",
          "managedHub": "testManagedHub",
          "name": "node.1",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
      <TextContent>
        <Text
          component="small"
        >
          testManagedHub
        </Text>
      </TextContent>
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "-",
    "header": "Status",
    "sort": "status",
  },
  Object {
    "cell": "-",
    "header": "Role",
    "sort": "role",
  },
  Object {
    "cell": "-",
    "header": "Architecture",
    "sort": "architecture",
  },
  Object {
    "cell": "-",
    "header": "OS image",
    "sort": "osImage",
  },
  Object {
    "cell": "-",
    "header": "CPU",
    "sort": "cpu",
  },
  Object {
    "cell": "-",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": "-",
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns url search params with 0 params 1`] = `"?cluster%3DtestCluster"`;

exports[`Correctly returns url search params with all params & apigroup 1`] = `"?cluster%3DtestCluster%26kind%3DPod%26apiversion%3Dv1%26namespace%3DtestNamespace%26name%3DtestName"`;

exports[`Correctly returns url search params with all params without apigroup 1`] = `"?cluster%3DtestCluster%26kind%3DPod%26apiversion%3Dv1%26namespace%3DtestNamespace%26name%3DtestName"`;
